dark mode fixed

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
 }
 nav ul {
   list-style-type: none;
